refactor: product page

--- a/frontend/src/components/spinner/spinner.module.css
+++ b/frontend/src/components/spinner/spinner.module.css
@@ -10,7 +10,7 @@
   height: 64px;
   margin: 8px;
   border-radius: 50%;
-  border: 6px solid #fff;
+  border: 6px solid #000000;
   border-color: #fff transparent #fff transparent;
   animation: lds-dual-ring 1.2s linear infinite;
 }
